@@ -1,4 +1,4 @@
-# last modified 2021-04-28 by J. Fox
+# last modified 2021-06-17 by J. Fox
 
 # additions for car >= 3.0-0, started 2016-12-27
 
@@ -50,13 +50,13 @@ S3method(brief, list)
 S3method(brief, "function")
 S3method(brief, default)
 S3method(brief, tbl)
-S3method(influence, merMod)
+# S3method(influence, merMod)
 S3method(influence, lme)
-S3method(cooks.distance, influence.merMod)
+# S3method(cooks.distance, influence.merMod)
 S3method(cooks.distance, influence.lme)
-S3method(dfbeta, influence.merMod)
+# S3method(dfbeta, influence.merMod)
 S3method(dfbeta, influence.lme)
-S3method(dfbetas, influence.merMod)
+# S3method(dfbetas, influence.merMod)
 S3method(dfbetas, influence.lme)
 S3method(infIndexPlot, influence.merMod)
 S3method(infIndexPlot, influence.lme)
